--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,28 @@
-h1 {color: blue;}
+html {
+  height: 100%;
+}
+
+h1 {
+  color: blue;
+}
+
+body {
+  margin: 0;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  background-color: lightblue;
+}
+
+section {
+  flex: 1;
+}
+
+footer {
+  background-color: lightblue;
+  text-align: center;
+  padding: 5px;
+}
