--- a/src/style.css
+++ b/src/style.css
@@ -3,12 +3,20 @@ html {
 }
 
 h1 {
-  color: blue;
+  color: white;
+  margin: 5px 0;
+}
+
+h2 {
+  color: white;
+  margin: 5px 0;
+  font-weight: 100;
+  font-size: 1, 2em;
 }
 
 body {
-  margin: 0;
   min-height: 100%;
+  margin: 0;
   display: flex;
   flex-direction: column;
 }
@@ -22,7 +30,29 @@ section {
 }
 
 footer {
-  background-color: lightblue;
   text-align: center;
   padding: 5px;
+  background-color: lightblue;
+}
+
+#header-wrapper {
+  display: flex;
+  flex-direction: row;
+}
+
+#header-info {
+  flex: 1;
+  padding: 10px;
+  text-shadow: 1px 1px 2px #000000;
+}
+
+#my-picture {
+  padding: 5px;
+  width: 108px;
+}
+
+#my-picture img {
+  border-radius: 50%;
+  border: 4px solid white;
+  background-color: #ffffff90;
 }
