--- a/src/style.css
+++ b/src/style.css
@@ -2,31 +2,57 @@ html {
   height: 100%;
 }
 
-h1 {
-  color: white;
-  margin: 5px 0;
-}
-
-h2 {
-  color: white;
-  margin: 5px 0;
-  font-weight: 100;
-  font-size: 1, 2em;
-}
-
 body {
   min-height: 100%;
   margin: 0;
   display: flex;
   flex-direction: column;
+  background-color: #e9f6f8;
 }
 
 header {
-  background-color: lightblue;
+  background-image: url(images/th.jpeg);
+}
+
+#header-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background: linear-gradient(45deg, #0798abfa, transparent);
+}
+
+#header-info {
+  flex: 1;
+  padding: 10px;
+  text-shadow: 1px 1px 2px #000000;
+}
+
+#my-picture {
+  padding: 5px;
+  width: 108px;
+  height: 108px;
+}
+
+#my-picture img {
+  border-radius: 50%;
+  border: 4px solid #fff;
+  background-color: #ffffff90;
+}
+
+h1 {
+  color: #ffffff;
+  margin: 5px 0;
+}
+
+h2 {
+  margin: 5px 0;
+  color: #ffffff;
+  font-weight: 100;
+  font-size: 1.2em;
 }
 
 section {
-  flex: 1;
+  padding: 15px;
 }
 
 #teamsTable {
@@ -53,26 +79,4 @@ footer {
   text-align: center;
   padding: 5px;
   background-color: lightblue;
-}
-
-#header-wrapper {
-  display: flex;
-  flex-direction: row;
-}
-
-#header-info {
-  flex: 1;
-  padding: 10px;
-  text-shadow: 1px 1px 2px #000000;
-}
-
-#my-picture {
-  padding: 5px;
-  width: 108px;
-}
-
-#my-picture img {
-  border-radius: 50%;
-  border: 4px solid white;
-  background-color: #ffffff90;
 }
